Fix header overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,6 +36,8 @@ body {
     }
 
     h1 {
+      margin-top: 0;
+      padding-top: 60px;
       font-size: 48px;
       line-height: 1.4em;
       font-family: Noe, 'Roboto', Arial, sans-serif;
